--- a/css/prefs.less
+++ b/css/prefs.less
@@ -139,6 +139,7 @@ body.ttrss_prefs {
 
 		td.v {
 			font-family : monospace;
+			word-break : break-all;
 		}
 	}
 }
