--- a/themes/night.css
+++ b/themes/night.css
@@ -1526,6 +1526,7 @@ body.ttrss_prefs .phpinfo td.e {
 }
 body.ttrss_prefs .phpinfo td.v {
   font-family: monospace;
+  word-break: break-all;
 }
 body.ttrss_prefs fieldset,
 body.ttrss_utility fieldset {
